add ACRO mode attitude sequencer
enable attitude control in Acro mode

clean up logic and add Euler angle printout

clean up matrix arithmetic and remove debug prints

add ACRO_ATT param to select full rate-mode attitude control

change acro mode yaw to rotation about earth Z

add RC control channel for attitude sequencer

pull sequencer into separate source file

--- a/src/modules/mc_pos_control/CMakeLists.txt
+++ b/src/modules/mc_pos_control/CMakeLists.txt
@@ -36,7 +36,8 @@ px4_add_module(
 	COMPILE_FLAGS -Os
 	STACK_MAIN 1200
 	SRCS
-		mc_pos_control_main.cpp
+		mc_sequencer.cpp
+		mc_pos_control_main.cpp 
 	DEPENDS
 		platforms__common
 	)
