--- a/src/systemcmds/tests/CMakeLists.txt
+++ b/src/systemcmds/tests/CMakeLists.txt
@@ -33,14 +33,25 @@
 
 set(srcs
 	test_adc.c
+	test_autodeclination.cpp
 	test_bson.c
-	test_float.c
+	test_conv.cpp
+	test_file.c
+	test_file2.c
+	test_float.cpp
 	test_gpio.c
 	test_hott_telemetry.c
 	test_hrt.c
-	test_int.c
+	test_int.cpp
 	test_jig_voltages.c
 	test_led.c
+	test_mathlib.cpp
+	test_mixer.cpp
+	test_mount.c
+	test_params.c
+	test_perf.c
+	test_ppm_loopback.c
+	test_rc.c
 	test_sensors.c
 	test_servo.c
 	test_sleep.c
@@ -48,16 +59,7 @@ set(srcs
 	test_uart_console.c
 	test_uart_loopback.c
 	test_uart_send.c
-	test_mixer.cpp
-	test_mathlib.cpp
-	test_file.c
-	test_file2.c
 	tests_main.c
-	test_params.c
-	test_ppm_loopback.c
-	test_rc.c
-	test_conv.cpp
-	test_mount.c
 	)
 
 if(${OS} STREQUAL "nuttx")
@@ -74,6 +76,7 @@ px4_add_module(
 	COMPILE_FLAGS
 		-Wno-unused-result
 		-Wno-float-equal
+		-Wno-missing-declarations
 		-Os
 	SRCS ${srcs}
 	DEPENDS
