force lockdown on loss of more than 50 consecutive sbus frames
implement Premerlani check for high rotation rate

temporarily disable GPS-based accel correction and add estimate of
centripetal acceleration

log centripetal accel estimate

centripetal test log

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -32,6 +32,7 @@
 ############################################################################
 
 set(msg_file_names
+    centripetal.msg
 	actuator_armed.msg
 	actuator_controls.msg
 	actuator_direct.msg
