Re-orged build to 32kib boundry with 16Kib or params at 8 2Kib blocks  N.B. This is subject to change once final sizes are known.

--- a/src/drivers/boards/esc35-v1/CMakeLists.txt
+++ b/src/drivers/boards/esc35-v1/CMakeLists.txt
@@ -31,6 +31,17 @@
 #
 ############################################################################
 
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"DO NOT RUN THIS ON HW")
+message(WARNING-"IT IS NOT PINED OUT TO HW")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+message(WARNING-"Configuraton is incomplete")
+
 include_directories(../../bootloaders/include)
 
 set(SRCS)
