systemlib: cmake: remove param/param.c from SRC for ArduPilot
ArduPilot has its own parameter system.

--- a/src/modules/systemlib/CMakeLists.txt
+++ b/src/modules/systemlib/CMakeLists.txt
@@ -75,6 +75,10 @@ if(NOT ${OS} STREQUAL "qurt")
 		)
 endif()
 
+if("${ARDUPILOT_BUILD}")
+	list(REMOVE_ITEM SRCS param/param.c)
+endif()
+
 px4_add_module(
 	MODULE modules__systemlib
 	COMPILE_FLAGS
