Added test for uart break

--- a/src/systemcmds/tests/CMakeLists.txt
+++ b/src/systemcmds/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ set(srcs
 	test_servo.c
 	test_sleep.c
 	test_uart_baudchange.c
+	test_uart_break.c
 	test_uart_console.c
 	test_uart_loopback.c
 	test_uart_send.c
