--- a/src/modules/navigator/CMakeLists.txt
+++ b/src/modules/navigator/CMakeLists.txt
@@ -44,15 +44,17 @@ px4_add_module(
 		mission.cpp
 		loiter.cpp
 		rtl.cpp
+		rcrecover.cpp
+		rcloss.cpp
+		datalinkloss.cpp
 		takeoff.cpp
 		land.cpp
 		mission_feasibility_checker.cpp
 		geofence.cpp
-		datalinkloss.cpp
-		rcloss.cpp
 		enginefailure.cpp
 		gpsfailure.cpp
 		follow_target.cpp
+		tracker.cpp
 	DEPENDS
 		platforms__common
 	)
