Changes for upstream nuttx and master

--- a/src/drivers/boards/aerocore/CMakeLists.txt
+++ b/src/drivers/boards/aerocore/CMakeLists.txt
@@ -36,6 +36,7 @@ px4_add_module(
 		-Os
 	SRCS
 		../common/board_name.c
+		../common/board_dma_alloc.c
 		aerocore_init.c
 		aerocore_pwm_servo.c
 		aerocore_spi.c
