--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ env:
 script:
   - git submodule update --quiet --init --recursive
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         docker run -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache --name travis-ci -d px4io/px4-dev-base tail -f /dev/null
+         docker run -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache --user=root --name travis-ci -d px4io/px4-dev-base tail -f /dev/null
       && docker cp ${TRAVIS_BUILD_DIR} travis-ci:/Firmware/
-      && docker exec -it travis-ci /bin/bash -c "cd /Firmware/; ccache -z; make check VECTORCONTROL=1; ccache -s";
+      && docker exec --user=root -it travis-ci /bin/bash -c "cd /Firmware/; ccache -z; make check VECTORCONTROL=1; ccache -s";
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       make check_posix_sitl_default;
     fi
