--- a/circle.yml
+++ b/circle.yml
@@ -15,5 +15,8 @@ dependencies:
 
 test:
   override:
+    - whoami
+    - echo $UID
+    - ls -ls $HOME
     - docker run --rm -v `pwd`:`pwd`:rw -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache -w=`pwd` --user=$UID -it px4io/px4-dev-base /bin/bash -c "make"
 
