use correct repo path

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ cache:
 before_install:
   - cd ${TRAVIS_BUILD_DIR} && git fetch --unshallow && git fetch --all --tags
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         if [ "$GCC_VER" = "4.8" ]; then DOCKER_REPO=px4-dev-base ; fi
-      && if [ "$GCC_VER" = "4.9" ]; then DOCKER_REPO=px4-dev-nuttx-gcc4.9 ; fi
+         if [ "$GCC_VER" = "4.8" ]; then DOCKER_REPO="px4io/px4-dev-base" ; fi
+      && if [ "$GCC_VER" = "4.9" ]; then DOCKER_REPO="px4io/px4-dev-nuttx-gcc4.9" ; fi
       && docker pull ${DOCKER_REPO};
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
          brew tap PX4/homebrew-px4
