--- a/.travis.yml
+++ b/.travis.yml
@@ -51,9 +51,7 @@ env:
 script:
   - git submodule update --quiet --init --recursive
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         docker run --user=root --name travis-ci -d ${DOCKER_REPO} tail -f /dev/null
-      && docker cp ${TRAVIS_BUILD_DIR} travis-ci:/Firmware/
-      && docker exec --user=root -it travis-ci /bin/bash -c "cd /Firmware/; ccache -z; make check VECTORCONTROL=1; ccache -s";
+         docker run --rm -v `pwd`:`pwd`:rw -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache -w=`pwd` --user=$UID -it ${DOCKER_REPO} /bin/bash -c "ccache -z; make check VECTORCONTROL=1; ccache -s";
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       make check_posix_sitl_default;
     fi
