--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ matrix:
   include:
     - os: linux
       sudo: required
-      env: GCC_VER=4.8
+      env: GCC_VER=4.8 DOCKER_REPO="px4io/px4-dev-base"
       services:
         - docker
     - os: linux
       sudo: required
-      env: GCC_VER=4.9
+      env: GCC_VER=4.9 DOCKER_REPO="px4io/px4-dev-nuttx-gcc4.9"
       services:
         - docker
     - os: osx
@@ -25,11 +25,9 @@ cache:
     - $HOME/.ccache
 
 before_install:
-  - cd ${TRAVIS_BUILD_DIR} && git fetch --unshallow && git fetch --all --tags
+  - cd ${TRAVIS_BUILD_DIR} && git fetch --unshallow && git fetch --all --tags && git submodule update --quiet --init --recursive
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         if [ "$GCC_VER" = "4.8" ]; then DOCKER_REPO="px4io/px4-dev-base" ; fi
-      && if [ "$GCC_VER" = "4.9" ]; then DOCKER_REPO="px4io/px4-dev-nuttx-gcc4.9" ; fi
-      && docker pull ${DOCKER_REPO};
+      docker pull ${DOCKER_REPO};
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
          brew tap PX4/homebrew-px4
       && brew update; brew update
@@ -49,35 +47,21 @@ env:
     - PX4_AWS_BUCKET=px4-travis
 
 script:
-  - git submodule update --quiet --init --recursive
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         docker run --rm -v `pwd`:`pwd`:rw -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache -w=`pwd` --user=$UID -it ${DOCKER_REPO} /bin/bash -c "ccache -z; make check VECTORCONTROL=1; ccache -s";
+      docker run --rm -v `pwd`:`pwd`:rw -v $HOME/.ccache:$HOME/.ccache:rw -e CCACHE_DIR=$HOME/.ccache -w=`pwd` --user=$UID -it ${DOCKER_REPO} /bin/bash -c "ccache -z; make check VECTORCONTROL=1; ccache -s";
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then
       make check_posix_sitl_default;
     fi
 
 after_success:
-  - make package_firmware && mkdir s3deploy-archive && mv Firmware.zip s3deploy-archive
+  - make package_firmware && mkdir s3deploy-archive && cp Firmware.zip s3deploy-archive/
+# find all px4 firmware (*.px4) and rename
   - find . -type f -name 'nuttx-*-default.px4' -exec cp "{}" . \;
   - find . -maxdepth 1 -mindepth 1 -type f -name 'nuttx-*-default.px4' | sed 's/.\/nuttx-//' | sed 's/-default.px4//' | xargs -I{} mv nuttx-{}-default.px4 {}_default.px4
-  - mkdir s3deploy-branch && mv *_default.px4 build_px4fmu-v2_default/parameters.xml build_px4fmu-v2_default/airframes.xml s3deploy-branch
+  - mkdir s3deploy-branch && mv *_default.px4 build_px4fmu-v2_default/parameters.xml build_px4fmu-v2_default/airframes.xml s3deploy-branch/
 
 deploy:
-  - provider: s3
-    access_key_id: $PX4_AWS_KEY
-    secret_access_key:
-      secure: $PX4_AWS_SECRET
-    bucket: px4-travis
-    local_dir: s3deploy-archive
-    upload-dir: archives/Firmware/$TRAVIS_BRANCH/$TRAVIS_BUILD_ID
-    acl: public_read
-    skip_cleanup: true
-    on:
-      branch: master
-      branch: beta
-      branch: stable
-      branch: docker
-      condition: $GCC_VER = 4.8
+# deploy *.px4 to S3 px4-travis/Firmware/$TRAVIS_BRANCH
   - provider: s3
     access_key_id: $PX4_AWS_KEY
     secret_access_key:
@@ -91,8 +75,25 @@ deploy:
       branch: master
       branch: beta
       branch: stable
-      branch: docker
       condition: $GCC_VER = 4.8
+
+# deploy Firmware.zip to S3 px4-travis/archives/Firmware/$TRAVIS_BRANCH/$TRAVIS_BUILD_ID
+  - provider: s3
+    access_key_id: $PX4_AWS_KEY
+    secret_access_key:
+      secure: $PX4_AWS_SECRET
+    bucket: px4-travis
+    local_dir: s3deploy-archive
+    upload-dir: archives/Firmware/$TRAVIS_BRANCH/$TRAVIS_BUILD_ID
+    acl: public_read
+    skip_cleanup: true
+    on:
+      branch: master
+      branch: beta
+      branch: stable
+      condition: $GCC_VER = 4.8
+
+# on tags deploy Firmware.zip to Github releases
   - provider: releases
     api_key: 
       secure: cdHWLRBxA5UlYpOS0Sp891QK7PFmMgQ5ZWs1aPt+sw0rIrowyWMHCwXNBEdUqaExHYNYgXCUDI0EzNgfB7ZcR63Qv1MQeoyamV4jsxlyAqDqmxNtWO82S6RhHGeMLk26VgFKzynVcEk1IYlQP2nqzMQLdu+jTrngERuAIrCdRuc=
