--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-include(CMakeForceCompiler)
-#CMAKE_FORCE_C_COMPILER(clang Clang)
-#CMAKE_FORCE_CXX_COMPILER(clang++ Clang)
-
 if("${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
 	add_compile_options(-Qunused-arguments )
 endif()
@@ -14,21 +10,9 @@ endif()
 project(unittests)
 enable_testing()
 
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -std=gnu99 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++11 -g -fno-exceptions -fno-rtti -fno-threadsafe-statics")
 
-if(COMPILER_SUPPORTS_CXX11)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fno-exceptions -fno-rtti -fno-threadsafe-statics -D__CUSTOM_FILE_IO__ -D__PX4_UNIT_TESTS -g -Wall -Werror")
-elseif(COMPILER_SUPPORTS_CXX0X)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -fno-exceptions -fno-rtti -fno-threadsafe-statics -D__CUSTOM_FILE_IO__ -D__PX4_UNIT_TESTS -g -Wall -Werror")
-else()
-	message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99 -g")
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 -fsanitize=address -fno-omit-frame-pointer")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare -Wno-unused-but-set-variable")
 
 set(GTEST_DIR ${CMAKE_SOURCE_DIR}/googletest)
 add_subdirectory(${GTEST_DIR})
@@ -52,10 +36,13 @@ include_directories(${PX4_SRC}/modules/uORB)
 include_directories(${PX4_SRC}/platforms)
 include_directories(${PX4_SRC}/platforms/posix/include)
 include_directories(${PX4_SRC}/platforms/posix/px4_layer)
+include_directories(${PX4_SRC}/platforms/posix/work_queue)
 
+add_definitions(-D__CUSTOM_FILE_IO__)
 add_definitions(-D__EXPORT=)
 add_definitions(-D__PX4_POSIX)
 add_definitions(-D__PX4_TESTS)
+add_definitions(-D__PX4_UNIT_TESTS)
 add_definitions(-D_UNIT_TEST=)
 add_definitions(-DERROR=-1)
 add_definitions(-Dmain_t=int)
@@ -68,26 +55,8 @@ else()
 	add_definitions(-D__PX4_LINUX)
 endif()
 
-# check
-add_custom_target(check
-		COMMAND ${CMAKE_CTEST_COMMAND} -j2 --output-on-failure
-		WORKING_DIR ${CMAKE_BINARY_DIR}
-		USES_TERMINAL)
-
-function(add_gtest)
-	foreach(test_name ${ARGN})
-		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-			target_link_libraries(${test_name} gtest_main pthread px4_platform)
-		else()
-			target_link_libraries(${test_name} gtest_main pthread rt px4_platform)
-		endif()
-		add_test(NAME ${test_name} COMMAND ${test_name} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
-		add_dependencies(check ${test_name})
-	endforeach()
-endfunction()
-
 add_library(px4_platform 
-			${PX4_SITL_BUILD}/src/modules/param/px4_parameters.c                         
+			${PX4_SITL_BUILD}/src/modules/param/px4_parameters.c
 			${PX4_SRC}/drivers/device/device_posix.cpp 
 			${PX4_SRC}/drivers/device/i2c_posix.cpp 
 			${PX4_SRC}/drivers/device/ringbuffer.cpp
@@ -114,10 +83,33 @@ add_library(px4_platform
 			${PX4_SRC}/platforms/posix/work_queue/sq_remfirst.c
 			${PX4_SRC}/platforms/posix/work_queue/work_cancel.c
 			${PX4_SRC}/platforms/posix/work_queue/work_lock.c
+			${PX4_SRC}/platforms/posix/work_queue/work_lock.h
 			${PX4_SRC}/platforms/posix/work_queue/work_queue.c
 			${PX4_SRC}/platforms/posix/work_queue/work_thread.c
-			)                           
-target_include_directories(px4_platform PUBLIC ${PX4_SRC}/platforms)                           
+			)
+target_include_directories(px4_platform PUBLIC ${PX4_SRC}/platforms)
+target_include_directories(px4_platform PUBLIC ${PX4_SRC}/platforms/posix/include)
+target_include_directories(px4_platform PUBLIC ${PX4_SRC}/platforms/posix/work_queue)
+
+
+# check
+add_custom_target(check
+		COMMAND ${CMAKE_CTEST_COMMAND} -j2 --output-on-failure
+		WORKING_DIR ${CMAKE_BINARY_DIR}
+		USES_TERMINAL)
+
+# add_gtest
+function(add_gtest)
+	foreach(test_name ${ARGN})
+		if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+			target_link_libraries(${test_name} gtest_main pthread px4_platform)
+		else()
+			target_link_libraries(${test_name} gtest_main pthread rt px4_platform)
+		endif()
+		add_test(NAME ${test_name} COMMAND ${test_name} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+		add_dependencies(check ${test_name})
+	endforeach()
+endfunction()
 
 
 #######################################################################
