--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 language: cpp
 
 git:
-  depth: 1
+  depth: 10
   submodules: false
 
 matrix:
@@ -28,7 +28,7 @@ cache:
     - $HOME/Library/Caches/pip
 
 before_install:
-  - git submodule update --init --recursive --depth 1
+  - git submodule update --init --recursive --quiet --depth 1
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
          git fetch --all --tags --unshallow
       && docker pull ${DOCKER_REPO}
