--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,10 @@ before_install:
       && sudo -H pip install empy
       && wget https://s3.amazonaws.com/px4-travis/toolchain/macos/ccache
       && sudo mv ccache /usr/local/bin
-      && sudo mkdir -p /usr/lib/ccache
-      && sudo ln -s /usr/local/bin/ccache /usr/lib/ccache/clang
-      && sudo ln -s /usr/local/bin/ccache /usr/lib/ccache/clang++
+      && mkdir -p ~/bin
+      && sudo ln -s /usr/local/bin/ccache ~/bin/clang
+      && sudo ln -s /usr/local/bin/ccache ~/bin/clang++
+      && export PATH=~/bin:$PATH
       && https://s3.amazonaws.com/px4-travis/toolchain/macos/ninja
       && sudo mv ninja /usr/local/bin
       ;
