Fix nuttx-configs for aerocore 	modified:   NuttX (modified content, untracked content) 	modified:   src/lib/DriverFramework (modified content)

--- a/src/drivers/boards/aerocore/CMakeLists.txt
+++ b/src/drivers/boards/aerocore/CMakeLists.txt
@@ -38,6 +38,7 @@ px4_add_module(
 		../common/board_name.c
 		aerocore_init.c
 		#aerocore_pwm_servo.c
+		aerocore_timer_config.c
 		aerocore_spi.c
 		aerocore_led.c
 	DEPENDS
