--- a/src/drivers/boards/aerocore/CMakeLists.txt
+++ b/src/drivers/boards/aerocore/CMakeLists.txt
@@ -38,7 +38,7 @@ px4_add_module(
 		../common/board_name.c
 		aerocore_init.c
 		#aerocore_pwm_servo.c
-		aerocore_timer_config.c
+		aerocore_timer_config.c  ##I need this, but the file does not work
 		aerocore_spi.c
 		aerocore_led.c
 	DEPENDS
