--- a/src/modules/attitude_estimator_q/CMakeLists.txt
+++ b/src/modules/attitude_estimator_q/CMakeLists.txt
@@ -35,7 +35,7 @@ px4_add_module(
 	MODULE modules__attitude_estimator_q
 	MAIN attitude_estimator_q
 	COMPILE_FLAGS
-		-Os
+		-Os -DDEBUG_BUILD
 	STACK_MAIN 1200
 	STACK_MAX 1600
 	SRCS
