Added OTGFS for aerocore 	modified:   nuttx-configs/aerocore/nsh/defconfig 	modified:   src/drivers/boards/aerocore/CMakeLists.txt 	new file:   src/drivers/boards/aerocore/aerocore_usb.c 	modified:   src/drivers/boards/aerocore/board_config.h

--- a/src/drivers/boards/aerocore/CMakeLists.txt
+++ b/src/drivers/boards/aerocore/CMakeLists.txt
@@ -41,6 +41,7 @@ px4_add_module(
 		aerocore_timer_config.c  ##I need this, but the file does not work
 		aerocore_spi.c
 		aerocore_led.c
+		aerocore_usb.c
 	DEPENDS
 		platforms__common
 	)
